# tensorflow-cmake

./: #protobuf.cmake#  .#protobuf.cmake  .gitignore  Eigen.cmake  FindEigen.cmake  FindProtobuf.cmake  FindTensorFlow.cmake  LICENSE.txt  Protobuf.cmake  README.md  build.sh  build_debian.sh  eigen.cmake  eigen.sh  install.sh  protobuf.cmake  protobuf.sh  test.sh  tfind.sh
cmake/: FindEigen.cmake  eigen.cmake
examples/: README.md
examples/external-project/: CMakeLists.txt  main.cc
examples/external-project/cmake/Modules/: Eigen.cmake  Protobuf.cmake  Protobuf_VERSION.cmake  eigen.cmake  eigen_VERSION.cmake  protobuf_VERSION.cmake
examples/install-project/: CMakeLists.txt  graph.pb
examples/install-project/cmake/Modules/: Eigen_VERSION.cmake  FindEigen.cmake  FindProtobuf.cmake  FindTensorFlow.cmake  Protobuf_VERSION.cmake
scripts/: eigen.sh
